--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,9 @@
 </head>
 <body>
   <%= render :partial => "layouts/header" %>
-  <%= yield %>
+  <div class="container" >
+    <%= yield %>
+  </div>
 
 </body>
 </html>
