--- a/app/assets/stylesheets/layouts/index.sass
+++ b/app/assets/stylesheets/layouts/index.sass
@@ -1,25 +1,27 @@
 .text-url-github
   position: relative
-  bottom: -15px
-  left: 20px
+  bottom: -20px
+  left: 12px
+  width: 23%
+  min-width: 260px
 
 .text-worker
-  bottom: 90px
-  left: 530px
+  bottom: 155px
+  left: 560px
+  min-width: 290px
   position: absolute
-  width: 18%
+  width: 15%
 
 .worker
   background: #F3F2F5
   border-radius: 10px
   color: #014054
   margin-bottom: 30px
+  margin-top: 270px
   min-width: 200px
   padding: 10px
-  position: absolute
-  bottom: 0
   text-align: center
-  width: 18%
+  width: 28%
   
   h3
     margin-top: 10px
