Added javascript functionality for update the workers status from the backend

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,2 +1,13 @@
 <p>o fortuna velut luna statu vaiabilis semper crescis aut decrescis vita detestabilis nunc obdurat et tunc curat ludo mentis asciem egestatem potestatem dissolvit ut glassciem</p>
 <%= text_field_tag 'github_url', nil, class: 'github_url', placeholder: 'https://github.com/path/to/project'%>
+
+<div class='workers-status-box'>
+  <p>
+    Total
+    <span class='js-total'>0</span>
+    , Busy
+    <span class='js-busy'>0</span>
+    , Available
+    <span class='js-available'>0</span>
+  </p>
+</div>
