--- a/app/assets/stylesheets/layouts/footer.sass
+++ b/app/assets/stylesheets/layouts/footer.sass
@@ -1,7 +1,8 @@
 .footer
   background: #202020
   min-height: 70px
-  padding: 18px 10px 10px 10px
+  padding: 22px 10px 10px 10px
 
   .logo-tango
     float: right
+    width: 165px
