Added loading icon style

--- a/app/assets/stylesheets/layouts/header-main.sass
+++ b/app/assets/stylesheets/layouts/header-main.sass
@@ -22,4 +22,9 @@ header
     position: relative
     top: 65px
     width: 50%
+    font-size: 1.4em
+
+  .loading-icon
+    background: #FFFFFE url(/assets/icon-loading.gif) no-repeat 98% 10px
+    background-size: 40px
 
