--- a/app/assets/stylesheets/layouts/header-main.sass
+++ b/app/assets/stylesheets/layouts/header-main.sass
@@ -8,7 +8,8 @@ header
     margin-top: 65px
     font-size: 1.6em
     color: #faf9fc
-    width: 50%
+    text-align: justify
+    max-width: 1170px
 
   img
     margin-top: 65px
@@ -21,7 +22,7 @@ header
     margin: 0 auto
     position: relative
     top: 65px
-    width: 50%
+    width: 1170px
     font-size: 1.4em
 
   .loading-icon
