Add class in html

--- a/app/assets/stylesheets/layouts/index.sass
+++ b/app/assets/stylesheets/layouts/index.sass
@@ -12,7 +12,7 @@
   position: absolute
   width: 15%
 
-.worker
+.workers-status-box
   background: #F3F2F5
   border-radius: 10px
   color: #014054
@@ -23,8 +23,12 @@
   text-align: center
   width: 28%
   
-  h3
+  p
     margin-top: 10px
+
+  div
+    font-size: 20px
+    display: block
   
   span
     font-size: 18px
