--- a/app/views/pages/index.html.haml
+++ b/app/views/pages/index.html.haml
@@ -1,10 +1,12 @@
 = image_tag 'text-url-github.png', class: 'text-url-github'
 = image_tag 'text-worker.png', class: 'text-worker'
 
-.worker
-  %h3
-    15 workers
-  %span
-    10 busy /
-  %span
-    5 available
+.workers-status-box
+  %p
+    %div
+      Total
+      %span.js-total 0
+    Busy
+    %span.js-busy 0
+    \/ Available
+    %span.js-available 0
