Fix text position absolute

--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -1,6 +1,7 @@
 %header
-  = image_tag "logo-blue.png"
-  %p 
-    o fortuna velut luna statu variabilis semper crescis aut decrescis vita detestabilis nunc obdurat et tunc curat ludo mentis asciem egestatem potestatem dissolvit ut glasciem sors inanis et imanis rota tu bovibilis status malus vana salus obumbrata et velata muchi quoque niteris.
-  
-  = text_field_tag 'github_url', nil, class: 'github_url form-control', placeholder: 'https://github.com/path/to/project'
+  .container
+    = image_tag "logo-blue.png"
+    %p 
+      o fortuna velut luna statu variabilis semper crescis aut decrescis vita detestabilis nunc obdurat et tunc curat ludo mentis asciem egestatem potestatem dissolvit ut glasciem sors inanis et imanis rota tu bovibilis status malus vana salus obumbrata et velata muchi quoque niteris.
+    
+    = text_field_tag 'github_url', nil, class: 'github_url form-control', placeholder: 'https://github.com/path/to/project'
