--- a/app/assets/stylesheets/layouts/header-main.sass
+++ b/app/assets/stylesheets/layouts/header-main.sass
@@ -1,6 +1,7 @@
 header
   background: asset_url('pattern-blue.jpg')
   min-height: 450px
+  position: relative
   text-align: center
 
   p
@@ -9,7 +10,6 @@ header
     font-size: 1.6em
     color: #faf9fc
     text-align: justify
-    max-width: 1170px
 
   img
     margin-top: 65px
@@ -17,12 +17,13 @@ header
   .form-control
     border: 6px solid rgba(0, 0, 0, 0.4)
     border-radius: 15px
-    box-sizing: content-box
-    min-height: 50px
+    left: 0
+    min-height: 80px
     margin: 0 auto
-    position: relative
-    top: 65px
-    width: 1170px
+    max-width: 1170px
+    position: absolute
+    right: 0
+    top: 409px
     font-size: 1.4em
 
   .loading-icon
