--- a/app/assets/stylesheets/layouts/header-main.sass
+++ b/app/assets/stylesheets/layouts/header-main.sass
@@ -3,6 +3,7 @@ header
   min-height: 450px
   position: relative
   text-align: center
+  padding-top: 66px
 
   p
     margin: 0 auto
@@ -11,8 +12,11 @@ header
     color: #faf9fc
     text-align: justify
 
-  img
-    margin-top: 65px
+  .simple-ci-logo
+    background: asset_url('logo-blue.png') no-repeat
+    height: 126px
+    width: 511px
+    margin: 0 auto
 
   .form-control
     border: 6px solid rgba(0, 0, 0, 0.4)
@@ -30,3 +34,10 @@ header
     background: #FFFFFE url(/assets/icon-loading.gif) no-repeat 98% 10px
     background-size: 40px
 
+.red
+  background: asset_url('pattern-red.jpg')
+  transition: 2s linear 1s
+
+  .simple-ci-logo
+    background: asset_url('logo-white.png') no-repeat
+    transition: 2s linear 1s
