fix height in Css class

--- a/app/assets/stylesheets/layouts/footer.sass
+++ b/app/assets/stylesheets/layouts/footer.sass
@@ -1,8 +1,11 @@
 .footer
   background: #202020
-  min-height: 70px
   padding: 22px 10px 10px 10px
+
+  .container
+    min-height: 50px
 
   .logo-tango
     float: right
     width: 165px
+    padding-top: 10px
