--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
 </head>
 <body>
   <%= render :partial => "layouts/header" %>
-  <div class="container" >
+  <div class="container content" >
     <%= yield %>
   </div>
   <%= render :partial => "layouts/footer" %>
