--- a/app/assets/stylesheets/layouts/header-main.sass
+++ b/app/assets/stylesheets/layouts/header-main.sass
@@ -30,14 +30,53 @@ header
     top: 409px
     font-size: 1.4em
 
+    h3, textarea, input[type='submit']
+      opacity: 0
+      transition: opacity 2s linear
+
+    h3
+      font-weight: bold
+      padding-left: 20px
+      text-align: left
+
+    textarea
+      background-color: #202020
+      border: none
+      border-radius: 15px
+      color: white
+      display: block
+      font-family: monaco
+      font-size: 14px
+      height: 60%
+      margin: 30px auto
+      padding: 20px
+      width: 70%
+
+    input[type='submit']
+      background-color: #720000
+      border: none
+      border-radius: 15px
+      color: white
+      padding: 14px 40px 12px 40px
+
+
   .loading-icon
     background: #FFFFFE url(/assets/icon-loading.gif) no-repeat 98% 10px
     background-size: 40px
 
 .red
   background: asset_url('pattern-red.jpg')
-  transition: 2s linear 1s
+  transition: 2s linear 0.2s
 
   .simple-ci-logo
     background: asset_url('logo-white.png') no-repeat
     transition: 2s linear 1s
+
+.script-stage
+  height: 500px
+  top: 256px !important
+  transition: 2s linear
+
+  h3, textarea, input[type='submit']
+    opacity: 1 !important
+    transition: opacity 1s linear 1.5s !important
