Reduced transition duration

--- a/app/assets/stylesheets/layouts/header-main.sass
+++ b/app/assets/stylesheets/layouts/header-main.sass
@@ -32,7 +32,7 @@ header
 
     h3, textarea, input[type='submit']
       opacity: 0
-      transition: opacity 2s linear
+      transition: opacity 1s linear
 
     h3
       font-weight: bold
@@ -66,17 +66,17 @@ header
 
 .red
   background: asset_url('pattern-red.jpg')
-  transition: 2s linear 0.2s
+  transition: 1s linear 0.2s
 
   .simple-ci-logo
     background: asset_url('logo-white.png') no-repeat
-    transition: 2s linear 1s
+    transition: 1s linear .5s
 
 .script-stage
   height: 500px
   top: 256px !important
-  transition: 2s linear
+  transition: 1s linear
 
   h3, textarea, input[type='submit']
     opacity: 1 !important
-    transition: opacity 1s linear 1.5s !important
+    transition: opacity 1s linear .5s !important
