Added icon close

--- a/app/assets/javascripts/templates/script_template.jst.ejs
+++ b/app/assets/javascripts/templates/script_template.jst.ejs
@@ -1,4 +1,4 @@
-<div class="form-control">
+<div class="form-control glyphicon glyphicon-remove">
 <h3>Modify your script</h3>
 <textarea></textarea>
 <input type="submit" value="RUN">
