Add class of icon close and add style

--- a/app/assets/javascripts/templates/script_template.jst.ejs
+++ b/app/assets/javascripts/templates/script_template.jst.ejs
@@ -1,4 +1,5 @@
-<div class="form-control glyphicon glyphicon-remove">
+<div class="form-control">
+<div class="glyphicon glyphicon-remove"></div>
 <h3>Modify your script</h3>
 <textarea></textarea>
 <input type="submit" value="RUN">
