--- a/app/assets/stylesheets/modals/script_stage.sass
+++ b/app/assets/stylesheets/modals/script_stage.sass
@@ -38,5 +38,6 @@ header
     opacity: 1 !important
     transition: opacity 1s linear .5s !important
 
-.glyphicon-remove.script-stage
-  text-align: right
+  .glyphicon-remove
+    cursor: pointer
+    float: right
