Created methods and animations to restore Github URL input

--- a/app/assets/stylesheets/modals/script_stage.sass
+++ b/app/assets/stylesheets/modals/script_stage.sass
@@ -1,6 +1,6 @@
 header
   .form-control
-    h3, textarea, input[type='submit']
+    h3, textarea, input[type='submit'], .glyphicon-remove
       opacity: 0
       transition: opacity 1s linear
 
@@ -34,7 +34,7 @@ header
   top: 256px !important
   transition: 1s linear
 
-  h3, textarea, input[type='submit']
+  h3, textarea, input[type='submit'], .glyphicon-remove
     opacity: 1 !important
     transition: opacity 1s linear .5s !important
 
