Added link to tangosource

--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -1,3 +1,3 @@
 .footer
   .container
-    = image_tag 'logo-tango.png', class: "logo-tango"
+    = link_to (image_tag 'logo-tango.png'), 'http://www.tangosource.com/', class: "logo-tango"
