Added console template and style

--- a/app/assets/stylesheets/modals/script_stage.sass
+++ b/app/assets/stylesheets/modals/script_stage.sass
@@ -20,6 +20,7 @@ header
       height: 60%
       margin: 30px auto
       padding: 20px
+      resize: none
       width: 70%
 
     input[type='submit']
@@ -28,11 +29,13 @@ header
       border-radius: 15px
       color: white
       padding: 14px 40px 12px 40px
+      cursor: pointer
 
 .script-stage
   height: 500px
   top: 256px !important
   transition: 1s linear
+  z-index: 1
 
   h3, textarea, input[type='submit'], .glyphicon-remove
     opacity: 1 !important
