--- a/app/assets/stylesheets/modals/console.sass
+++ b/app/assets/stylesheets/modals/console.sass
@@ -3,6 +3,7 @@ header
     .glyphicon-remove
       opacity: 0
       transition: opacity 1s linear
+      -webkit-transition: opacity 1s linear
       color: #ffffff
       cursor: pointer
       float: right
@@ -18,7 +19,7 @@ header
     
     .run, .glyphicon-remove
       opacity: 1 !important
-      transition: opacity 1s linear .5s !important
+      -webkit-transition: opacity 1s linear .5s !important
 
   .console .run, .console
     background-color: #202020
@@ -28,5 +29,5 @@ header
     font-size: 14px
     top: 256px !important
     opacity: 1 !important
-    transition: opacity 1s linear !important
+    -webkit-transition: opacity 1s linear !important
     z-index: 1
