--- a/app/assets/stylesheets/modals/script_stage.sass
+++ b/app/assets/stylesheets/modals/script_stage.sass
@@ -35,11 +35,13 @@ header
   height: 500px
   top: 256px !important
   transition: 1s linear
+  -webkit-transition: 1s linear
   z-index: 1
 
   h3, textarea, input[type='submit'], .glyphicon-remove
     opacity: 1 !important
-    transition: opacity 1s linear .5s !important
+    transition: opacity 1s linear !important
+    -webkit-transition: opacity 1s linear !important
 
   .glyphicon-remove
     cursor: pointer
