--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>R13Team186</title>
-  <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
-  <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
-  <%= csrf_meta_tags %>
-</head>
-<body>
-  <script src="http://s0.railsrumble.com/banner.js" type="text/javascript"></script>
-  <%= render :partial => "layouts/header" %>
-  <div class="container content" >
-    <%= yield %>
-  </div>
-  <%= render :partial => "layouts/footer" %>
+  <head>
+    <title>R13Team186</title>
+    <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
+    <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
+    <%= csrf_meta_tags %>
+  </head>
+  <body>
+    <script src="http://s0.railsrumble.com/banner.js" type="text/javascript"></script>
+    <%= hidden_field :session_id, "", value: session[:user][:id] %>
+    <%= render :partial => "layouts/header" %>
+    <div class="container content" >
+      <%= yield %>
+    </div>
+    <%= render :partial => "layouts/footer" %>
 
-</body>
+  </body>
 </html>
