Improved error handling

--- a/app/assets/stylesheets/layouts/header_red.sass
+++ b/app/assets/stylesheets/layouts/header_red.sass
@@ -35,6 +35,11 @@ header
     background: #FFFFFE url(/assets/icon-loading.gif) no-repeat 98% 10px
     background-size: 40px
 
+  .fail-icon
+    background: #FFFFFE url(/assets/icon-fail.png) no-repeat 98% 13px
+    background-size: 40px
+    transition: none
+
 .red
   background: asset_url('pattern-red.jpg')
   transition: 1s linear 0.5s
