Added the correct url of fonts

--- a/app/assets/stylesheets/screen.sass
+++ b/app/assets/stylesheets/screen.sass
@@ -1,10 +1,10 @@
 @font-face
   font-family: biko
-  src: url('Biko_Regular.ttf'), url('Biko_Regular.eot'), url('Biko_Regular.svg')
+  src: url('biko/Biko_Regular.ttf'), url('biko/Biko_Regular.eot'), url('biko/Biko_Regular.svg#biko') format('svg')
 
 @font-face
   font-family: monaco
-  src: url('monaco.ttf'), url('monaco.eot'), url('monaco.svg')
+  src: url('monaco/monaco.ttf'), url('monaco/monaco.eot'), url('monaco/monaco.svg')
 
 body
   font-family: biko, helvetica
