Added badge and banner

--- a/app/assets/stylesheets/layouts/footer.sass
+++ b/app/assets/stylesheets/layouts/footer.sass
@@ -9,3 +9,8 @@
     float: right
     width: 165px
     padding-top: 10px
+
+  .logo-railsrumble
+    float: left
+    width: 165px
+    padding-top: 10px
