--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -1,3 +1,4 @@
 .footer
   .container
     = link_to (image_tag 'logo-tango.png'), 'http://www.tangosource.com/', class: "logo-tango"
+    = link_to (image_tag 'http://s0.railsrumble.com/rails-rumble-badge-2013.png'), 'http://railsrumble.com/', class: "logo-railsrumble"
