--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -2,6 +2,8 @@
   .container
     .simple-ci-logo
     %p
-      o fortuna velut luna statu variabilis semper crescis aut decrescis vita detestabilis nunc obdurat et tunc curat ludo mentis asciem egestatem potestatem dissolvit ut glasciem sors inanis et imanis rota tu bovibilis status malus vana salus obumbrata et velata muchi quoque niteris.
+      A continuous integration tool for github ruby projects
+      %br
+      You can easily use simple CI to run your tests and almost config-free. Just write the url for your Github project (EG. https://github.com/user/ruby-project), edit your deployment script and run!
 
     = text_field_tag 'github_url', nil, class: 'github_url form-control', placeholder: 'https://github.com/path/to/project'
