Added correct asset urls

--- a/app/assets/stylesheets/screen.sass
+++ b/app/assets/stylesheets/screen.sass
@@ -1,10 +1,10 @@
 @font-face
   font-family: biko
-  src: url('biko/Biko_Regular.ttf'), url('biko/Biko_Regular.eot'), url('biko/Biko_Regular.svg#biko') format('svg')
+  src: asset-url('biko/Biko_Regular.ttf'), asset-url('biko/Biko_Regular.eot'), asset-url('biko/Biko_Regular.svg#biko') format('svg')
 
 @font-face
   font-family: monaco
-  src: url('monaco/monaco.ttf'), url('monaco/monaco.eot'), url('monaco/monaco.svg')
+  src: asset-url('monaco/monaco.ttf'), asset-url('monaco/monaco.eot'), asset-url('monaco/monaco.svg')
 
 body
   font-family: biko, helvetica
