Fixed asset url

--- a/app/assets/stylesheets/layouts/header-main.sass
+++ b/app/assets/stylesheets/layouts/header-main.sass
@@ -1,5 +1,5 @@
 header
-  background: asset_url('pattern-blue.jpg')
+  background: asset-url('pattern-blue.jpg')
   min-height: 450px
   position: relative
   text-align: center
@@ -13,7 +13,7 @@ header
     text-align: justify
 
   .simple-ci-logo
-    background: asset_url('logo-blue.png') no-repeat
+    background: asset-url('logo-blue.png') no-repeat
     height: 126px
     width: 511px
     margin: 0 auto
