--- a/app/assets/stylesheets/layouts/header_red.sass
+++ b/app/assets/stylesheets/layouts/header_red.sass
@@ -32,21 +32,21 @@ header
 
 
   .loading-icon
-    background: #FFFFFE url(/assets/icon-loading.gif) no-repeat 98% 10px
+    background: #FFFFFE asset-url('icon-loading.gif') no-repeat 98% 10px
     background-size: 40px
 
   .fail-icon
-    background: #FFFFFE url(/assets/icon-fail.png) no-repeat 98% 13px
+    background: #FFFFFE asset-url('icon-fail.png') no-repeat 98% 13px
     background-size: 40px
     transition: none
 
 .red
-  background: asset_url('pattern-red.jpg')
+  background: asset-url('pattern-red.jpg')
   transition: 1s linear 0.5s
   -webkit-transition: 1s linear 0.5s
 
   .simple-ci-logo
-    background: asset_url('logo-white.png') no-repeat
+    background: asset-url('logo-white.png') no-repeat
     transition: 2s
     -webkit-transition: 2s
 
