--- a/app/assets/stylesheets/modals/console.sass
+++ b/app/assets/stylesheets/modals/console.sass
@@ -16,6 +16,8 @@ header
       height: 90%
       resize: none
       width: 100%
+      overflow-x: hidden
+      text-align: left
     
     .run, .glyphicon-remove
       opacity: 1 !important
