--- a/app/assets/javascripts/templates/console_template.jst.ejs
+++ b/app/assets/javascripts/templates/console_template.jst.ejs
@@ -1,4 +1,4 @@
-<div class='form-control console'>
+<div class='form-control console nano'>
   <div class="glyphicon glyphicon-remove remove-console"></div>
-  <textarea class="run"></textarea>
+  <textarea class="run content"></textarea>
 </div>
