--- a/app/assets/javascripts/templates/script_template.jst.ejs
+++ b/app/assets/javascripts/templates/script_template.jst.ejs
@@ -1,5 +1,5 @@
 <div class="form-control">
-<div class="glyphicon glyphicon-remove remove-script"></div>
+<div class="remove remove-script"></div>
 <h3>Modify your script</h3>
 <textarea></textarea>
 <input type="submit" value="RUN" class="btn-run">
