--- a/app/assets/javascripts/templates/console_template.jst.ejs
+++ b/app/assets/javascripts/templates/console_template.jst.ejs
@@ -1,4 +1,5 @@
 <div class='form-control console nano'>
   <div class="glyphicon glyphicon-remove remove-console"></div>
-  <div class="run"></div>
+  <div class="run content"></div>
+  <div class="pane"></div>
 </div>
