--- a/app/assets/stylesheets/modals/console.sass
+++ b/app/assets/stylesheets/modals/console.sass
@@ -5,7 +5,7 @@ header
       transition: opacity 1s linear
       -webkit-transition: opacity 1s linear
       cursor: pointer
-      background: url(/assets/close-white.png) no-repeat right
+      background: image-url('close-white.png') no-repeat right
       height: 22px
       background-size: 22px
 
