--- a/app/assets/stylesheets/modals/script_stage.sass
+++ b/app/assets/stylesheets/modals/script_stage.sass
@@ -44,7 +44,7 @@ header
     -webkit-transition: opacity 1s linear !important
 
   .remove-script
-    background: url(/assets/close.png) no-repeat right
+    background: image-url('close.png') no-repeat right
     cursor: pointer
     height: 22px
     background-size: 22px
