Added link to logo simple CI

--- a/app/assets/stylesheets/layouts/header-main.sass
+++ b/app/assets/stylesheets/layouts/header-main.sass
@@ -17,6 +17,7 @@ header
     height: 126px
     width: 511px
     margin: 0 auto
+    margin-top: 18px
 
   .form-control
     border: 6px solid rgba(0, 0, 0, 0.4)
