--- a/app/assets/stylesheets/layouts/header_red.sass
+++ b/app/assets/stylesheets/layouts/header_red.sass
@@ -47,6 +47,7 @@ header
 
   .simple-ci-logo
     background: asset-url('logo-white.png') no-repeat
+    margin-top: 18px
     transition: 2s
     -webkit-transition: 2s
 
