--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -1,6 +1,7 @@
 %header
   .container
-    .simple-ci-logo
+    = link_to root_path do
+      .simple-ci-logo
     %p
       A continuous integration tool for github ruby projects
       %br
