--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -1,4 +1,9 @@
 %header
+  .menu
+    %ul.nav.nav-bar
+      %li
+        = link_to_dashboard
+    = link_to_sign_in
   .container
     = link_to root_path do
       .simple-ci-logo
