--- a/app/views/users/dashboard.html.haml
+++ b/app/views/users/dashboard.html.haml
@@ -6,4 +6,4 @@
         %th status
         %th name
     %tbody
-      = render partial: 'repo', collection: @repos, as: 'repo'
+      = render partial: 'repo', collection: repos, as: 'repo'
