--- a/app/assets/stylesheets/layouts/index.sass
+++ b/app/assets/stylesheets/layouts/index.sass
@@ -37,3 +37,17 @@
     
     span
       font-size: 18px
+  
+  .form-control
+    border: 6px solid rgba(0, 0, 0, 0.4)
+    border-radius: 15px
+    left: 0
+    min-height: 80px
+    margin: 0 auto
+    max-width: 1170px
+    position: absolute
+    right: 0
+    top: -40px
+    font-size: 1.4em
+    transition: 2s
+    -webkit-transition: 2s
