fixed javascript script view

--- a/app/assets/stylesheets/layouts/footer.sass
+++ b/app/assets/stylesheets/layouts/footer.sass
@@ -2,6 +2,9 @@
 .footer
   background: $dark-gray
   padding: 22px 10px 10px 10px
+  position: absolute
+  bottom: 0
+  width: 100%
 
   .container
     min-height: 50px
