--- a/app/assets/stylesheets/layouts/header_red.sass
+++ b/app/assets/stylesheets/layouts/header_red.sass
@@ -1,4 +1,4 @@
-header
+.content.container
   .form-control
     h3, textarea, input[type='submit']
       opacity: 0
@@ -53,7 +53,7 @@ header
 
 .script-stage
   height: 500px
-  top: 256px !important
+  top: 50px !important
   -webkit-transition: 1s linear
 
   h3, textarea, input[type='submit']
