--- a/app/assets/stylesheets/modals/script_stage.sass
+++ b/app/assets/stylesheets/modals/script_stage.sass
@@ -1,4 +1,4 @@
-header
+.container.content
   .form-control
     h3, textarea, input[type='submit'], .remove-script
       opacity: 0
@@ -30,10 +30,12 @@ header
       color: white
       padding: 14px 40px 12px 40px
       cursor: pointer
+      display: block
+      margin: 0 auto
 
 .script-stage
   height: 500px
-  top: 256px !important
+  top: 50px !important
   transition: 1s linear
   -webkit-transition: 1s linear
   z-index: 1
