fixed javascript and views

--- a/app/assets/stylesheets/modals/console.sass
+++ b/app/assets/stylesheets/modals/console.sass
@@ -1,4 +1,4 @@
-header
+.container.content
   .form-control.console
     .remove-console
       opacity: 0
@@ -36,7 +36,7 @@ header
     display: block
     font-family: monaco
     font-size: 14px
-    top: 256px !important
+    top: 50px !important
     opacity: 1 !important
     -webkit-transition: opacity 1s linear !important
     z-index: 1
