--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -1,4 +1,12 @@
 .footer
   .container
     = link_to (image_tag 'logo-tango.png'), 'http://www.tangosource.com/', class: "logo-tango"
-    = link_to (image_tag 'http://s0.railsrumble.com/rails-rumble-badge-2013.png'), 'http://railsrumble.com/', class: "logo-railsrumble"
+    .workers-status-box
+      %p
+        %div
+          Total
+          %span.js-total 0
+        Busy
+        %span.js-busy 0
+        \/ Available
+        %span.js-available 0
