--- a/app/assets/stylesheets/layouts/footer.sass
+++ b/app/assets/stylesheets/layouts/footer.sass
@@ -9,6 +9,19 @@
   .container
     min-height: 50px
 
+    .workers-status-box
+      background: #F3F2F5
+      border-radius: 10px
+      color: #014054
+      margin-bottom: 14px
+      min-width: 200px
+      padding: 10px
+      text-align: center
+      width: 28%
+      position: absolute
+      bottom: 0
+      
+
   .logo-tango
     float: right
     width: 165px
