Added more stuff

--- a/app/assets/stylesheets/layouts/header-main.sass
+++ b/app/assets/stylesheets/layouts/header-main.sass
@@ -11,6 +11,9 @@ header
     padding-right: 10px
 
     .pull-left, .pull-right
+      margin: 15px 15px 15px 15px
+      a
+        color: white
 
   p
     margin-bottom: 80px
