--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -2,6 +2,7 @@
   .menu
     .pull-right
       = session_links
+  = render partial: "layouts/flash"
   .container
     = link_to root_path do
       .simple-ci-logo
