--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -8,7 +8,7 @@
     = csrf_meta_tags
   %body
     = hidden_field :session_id, "", value: request.session_options[:id]
-    = render :partial => "layouts/header"
+    = render partial: "layouts/header"
     .container.content
       = yield
-    = render :partial => "layouts/footer"
+    = render partial: "layouts/footer"
