--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -1,4 +1,7 @@
 %header
+  - if params[:controller] == "pages" and params[:action] == "index"
+    %a(href="https://github.com/tangosource/simple-ci" target='_github')
+      %img(style="position: absolute; top: 0; left: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_left_red_aa0000.png" alt="Fork me on GitHub")
   .menu
     .pull-right
       = session_links
