--- a/app/views/dashboard/_local_repo.html.haml
+++ b/app/views/dashboard/_local_repo.html.haml
@@ -1,3 +1,3 @@
 %tr{ class: "#{['active', 'success', 'warning', 'danger'].sample}" }
-  %td= repo.name
-  %td= check_box_tag 'add to review', true, false
+  %td=         repo.name
+  %td#uid(hidden)= repo.uid
