--- a/app/views/dashboard/_public_repo.html.haml
+++ b/app/views/dashboard/_public_repo.html.haml
@@ -4,9 +4,5 @@
   %td#id(hidden)=   repo[:id]
   %td
     .btn-group
-      - if repo_active?(repo[:url])
-        %a.js-on.btn.btn-default.active    On
-        %a.js-off.btn.btn-default.inactive Off
-      - else
-        %a.js-on.btn.btn-default.inactive On
-        %a.js-off.btn.btn-default.active  Off
+      %a.js-on.btn.btn-default.active{ class: "#{repo_active_class(url)}"}    On
+      %a.js-off.btn.btn-default.inactive{ class: "#{repo_active_class(url)}"} Off
