--- a/app/assets/stylesheets/modals/script_stage.sass
+++ b/app/assets/stylesheets/modals/script_stage.sass
@@ -1,13 +1,34 @@
 .container.content
+  
   .form-control
     h3, textarea, input[type='submit'], .remove-script
       opacity: 0
       transition: opacity 1s linear
 
+  .script-stage
+    height: 500px
+    margin-top: 35px
+    position: static
+    transition: 1s linear
+    -webkit-transition: 1s linear
+    z-index: 1
+    
     h3
       font-weight: bold
       padding-left: 20px
       text-align: left
+  
+    h3, textarea, input[type='submit'], .remove-script
+      opacity: 1 !important
+      transition: opacity 1s linear !important
+      -webkit-transition: opacity 1s linear !important
+
+    .remove-script
+      background: image-url('close.png') no-repeat right
+      cursor: pointer
+      height: 22px
+      background-size: 22px
+
 
     textarea
       background-color: #202020
@@ -32,21 +53,3 @@
       cursor: pointer
       display: block
       margin: 0 auto
-
-.script-stage
-  height: 500px
-  top: 50px !important
-  transition: 1s linear
-  -webkit-transition: 1s linear
-  z-index: 1
-
-  h3, textarea, input[type='submit'], .remove-script
-    opacity: 1 !important
-    transition: opacity 1s linear !important
-    -webkit-transition: opacity 1s linear !important
-
-  .remove-script
-    background: image-url('close.png') no-repeat right
-    cursor: pointer
-    height: 22px
-    background-size: 22px
