--- a/app/views/dashboard/_public_repo.html.haml
+++ b/app/views/dashboard/_public_repo.html.haml
@@ -1,12 +1,7 @@
 %tr
-  %td#name=         repo[:name]
-  %td#url(hidden)=  repo[:url]
-  %td#id(hidden)=   repo[:id]
+  %td#name=         repo.name
+  %td#url(hidden)=  repo.url
+  %td#id(hidden)=   repo.uid
   %td
     .btn-group
-      - if repo_active?(repo[:url])
-        %a.js-on.btn.btn-default.active    On
-        %a.js-off.btn.btn-default.inactive Off
-      - else
-        %a.js-on.btn.btn-default.inactive  On
-        %a.js-off.btn.btn-default.active   Off
+      = render partial: 'button_link', locals: { btn_classes: button_classes(repo.activated) }
