refactored backbone code

--- a/app/views/dashboard/_add_repos_modal.html.haml
+++ b/app/views/dashboard/_add_repos_modal.html.haml
@@ -13,5 +13,4 @@
           %tbody
             = render partial: 'public_repo', collection: github_repos, as: 'repo'
       .modal-footer
-        %button.btn.btn-default{"data-dismiss" => "modal", type: "button"} Cancel
-        %button#save.btn.btn-primary{type: "button"} Save
+        %button.btn.btn-info{"data-dismiss" => "modal", type: "button"} Close
