--- a/app/views/dashboard/index.html.haml
+++ b/app/views/dashboard/index.html.haml
@@ -9,3 +9,4 @@
     %tbody
       = render partial: 'local_repo', collection: local_repos, as: 'repo'
 = render partial: 'add_repos_modal'
+= render partial: 'repo_template'
