puting a underscore in #on & #off#{repo.name}

--- a/app/views/dashboard/_public_repo.html.haml
+++ b/app/views/dashboard/_public_repo.html.haml
@@ -5,5 +5,5 @@
   %td
     .btn-group
       - classes = button_classes(repo.activated)
-      %a.js-on.btn.btn-default{id: "on#{repo.name}", class:  classes[0]} On
-      %a.js-off.btn.btn-default{id: "off#{repo.name}", class: classes[1]} Off
+      %a.js-on.btn.btn-default{id: "on_#{repo.name}", class:  classes[0]} On
+      %a.js-off.btn.btn-default{id: "off_#{repo.name}", class: classes[1]} Off
