--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,9 @@
     <%= csrf_meta_tags %>
   </head>
   <body>
+    <a href="https://github.com/tangosource/simple-ci" target='_github'>
+      <img style="position: absolute; top: 0; left: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_left_red_aa0000.png" alt="Fork me on GitHub" />
+    </a>
     <script src="http://s0.railsrumble.com/banner.js" type="text/javascript"></script>
     <%= hidden_field :session_id, "", value: request.session_options[:id] %>
     <%= render :partial => "layouts/header" %>
