Added SEO metatags

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>simple CI</title>
+    <title>Simple CI | TangoSource</title>
+    <meta name="description=", content="A continuous integration tool for github ruby projects.">
+    <meta name="keywords" content="continuous integration, continuous integration, ruby continuous integration">
     <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
     <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
     <%= favicon_link_tag 'favicon.ico' %>
